add chat events
