# cmd/api/main.go
@@ -14,6 +14,7 @@ import (
 	"github.com/vmdt/gogameserver/pkg/http"
 	"github.com/vmdt/gogameserver/pkg/logger"
 	"github.com/vmdt/gogameserver/pkg/postgresgorm"
+	"github.com/vmdt/gogameserver/pkg/rabbitmq"
 	redis2 "github.com/vmdt/gogameserver/pkg/redis"
 	"github.com/vmdt/gogameserver/server"
 	"github.com/vmdt/gogameserver/server/configurations"
@@ -21,6 +22,21 @@ import (
 
 	_ "github.com/vmdt/gogameserver/pkg/system" // load system env
 )
+
+// @title Battleship API
+// @version 1.0
+// @description API for Battleship game
+// @BasePath /
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and then your token.
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name X-API-Key
+// @description Provide your API key here.
 
 func main() {
 	fx.New(
@@ -35,6 +51,8 @@ func main() {
 				redis2.NewRedisClient,
 				elastic.NewElasticClient,
 				auth.NewJwtService,
+				rabbitmq.NewRabbitMQConn,
+				rabbitmq.NewPublisher,
 			),
 			player_api.Startup(),
 			room_api.Startup(),
